--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="header_top">
 		<div class="wrap">
 			<div class="logo">
-				<a href="/index.html"><img src="/images/আমি-ইশতিয়াক-লগো.png" alt="আমি ইশতিয়াক লগো"/></a>
+				<a href="index.html"><img src="/images/আমি-ইশতিয়াক-লগো.png" alt="আমি ইশতিয়াক লগো"/></a>
 			</div>
 			<div class="clear"></div>
 		</div>
