--- a/পোস্ট/প্রবন্ধ/পিঁপড়ে-ও-তাদের-জীবনযাত্রা.html
+++ b/পোস্ট/প্রবন্ধ/পিঁপড়ে-ও-তাদের-জীবনযাত্রা.html
@@ -5,7 +5,7 @@
 <title>পিঁপড়েও তাদের জীবনযাত্রা</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="description" content="পিঁপড়েরা মানুষের মতোই।তারা মানুষের মতো পশু পালন করে,চাষ করে। এমনকি মানুষের মতো অপহরন কিংবা চুরি বা খুন করতেও তারা পিছু পা হয় না।">
-<link href="/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
 <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
 </head>
 <body>
